# sane-plustek-lide25

./: ANALOG_TO_DIGITAL_CONVERSION.md  BUILD_GUIDE.md  COPY_FILES.md  CUSTOM_SCANNER_COMMANDS_GUIDE.md  LICENSE  MINIMAL.md  MODIFIED_SANE_EXPLAINED.md  Makefile.am  README.md  SCANNER_DATA_RECEPTION_ANALYSIS.md  autogen.sh  configure.ac
backend/: Makefile.am  plustek-pp.h  plustek-pp_dbg.h  plustek-pp_detect.c  plustek-pp_hwdefs.h  plustek-pp_image.c  plustek-pp_io.c  plustek-pp_misc.c  plustek-pp_motor.c  plustek-pp_p12.c  plustek-pp_p48xx.c  plustek-pp_procs.h  plustek-pp_ptdrv.c  plustek-pp_scan.h  plustek-pp_scandata.h  plustek-usbshading.c  plustek.c  plustek_pp.c
frontend/: Makefile.am  jpegtopdf.c  scanimage.c
include/: Makefile.am
include/sane/: Makefile.am  sanei_backend.h  sanei_directio.h  sanei_usb.h  saneopts.h
lib/: Makefile.am
sanei/: Makefile.am  sanei_ab306.c  sanei_config.c  sanei_directio.c  sanei_jpeg.c  sanei_magic.c  sanei_pa4s2.c  sanei_pio.c  sanei_pp.c  sanei_pv8630.c  sanei_scsi.c  sanei_thread.c  sanei_usb.c  sanei_wire.c
