## lib/Makefile.am - Compatibility utilities for cross-platform support

noinst_LIBRARIES = libsanei_compat.a

libsanei_compat_a_SOURCES = \
    snprintf.c \
    getopt.c \
    getopt1.c \
    strdup.c \
    strndup.c \
    strsep.c \
    strcasestr.c \
    md5.c \
    inet_ntop.c \
    inet_pton.c \
    sleep.c \
    usleep.c \
    sigprocmask.c

libsanei_compat_a_CPPFLAGS = $(AM_CPPFLAGS)
