## include/sane/Makefile.am - SANE API headers

sanedir = $(includedir)/sane

# Core SANE API and headers (all available headers)
sane_HEADERS = \
    sane.h \
    sanei.h \
    sanei_backend.h \
    sanei_usb.h \
    sanei_config.h \
    sanei_debug.h \
    saneopts.h \
    sanei_access.h \
    sanei_auth.h \
    sanei_constrain_value.h \
    sanei_thread.h \
    sanei_tcp.h \
    sanei_wire.h \
    sanei_jpeg.h \
    sanei_scsi.h
